fixed typo in index.html refractor <body> tag which is <bdoy> closing tag is the same as the opening tag

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <title>odin-recipes</title>
 </head>
-<bdoy>
+
+<body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/tiramisu.html">Tiramisu Recipe</a>
-</bdoy>
+</body>
 
 </html>
