--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/tiramisu.html">Tiramisu Recipe</a>
+    <img src="./images/Tiramisu.jpg" alt="Tiramisu-img">
 </body>
 
 </html>
