--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -8,6 +8,9 @@
 
 <body>
     <h1>Tiramisu Recipe</h1>
+    <img src="./images/Tiramisu.jpg" alt="Tiramisu-img">
+    <h2>Description</h2>
+    <p>Tiramisu is a classic Italian layered dessert with rum-flavored, coffee-soaked ladyfingers, a creamy mascarpone custard, and whipped cream. This tiramisu recipe is easy to make at home for an impressive no-bake dessert.</p>
 </body>
 
 </html>
