--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/tiramisu.html">Tiramisu Recipe</a>
-    <a href="./recipes/chickenBhuna.html"></a>
+    <a href="./recipes/chickenBhuna.html">Chicken Bhuna Recipe/a>
 </body>
 
 </html>
