add a heading of chicken bhuna recipe and a cickenBhuna image

--- a/recipes/chickenBhuna.html
+++ b/recipes/chickenBhuna.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-
+    <h1>Chicken Bhuna Recipe</h1>
+    <img src="../images/chickenBhuna.jpg" alt="chicken-bhuna-img">
 </body>
 
 </html>
