add description for chicken bhuna recipe

--- a/recipes/chickenBhuna.html
+++ b/recipes/chickenBhuna.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Chicken Bhuna Recipe</h1>
     <img src="../images/chickenBhuna.jpg" alt="chicken-bhuna-img">
+    <h2>Description</h2>
+    <p>Chicken bhuna is an Indian curry with delicious fried onions and aromatic herb and spices that tastes fantastic! Enjoy with freshly cooked basmati rice and naan bread.</p>
 </body>
 
 </html>
