--- a/recipes/chickenBhuna.html
+++ b/recipes/chickenBhuna.html
@@ -10,7 +10,26 @@
     <h1>Chicken Bhuna Recipe</h1>
     <img src="../images/chickenBhuna.jpg" alt="chicken-bhuna-img">
     <h2>Description</h2>
-    <p>Chicken bhuna is an Indian curry with delicious fried onions and aromatic herb and spices that tastes fantastic! Enjoy with freshly cooked basmati rice and naan bread.</p>
+    <p>Chicken bhuna is an Indian curry with delicious fried onions and aromatic herb and spices that tastes fantastic!
+        Enjoy with freshly cooked basmati rice and naan bread.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 tablespoons vegetable oil</li>
+        <li>3 medium onions, finely chopped</li>
+        <li>1 teaspoon salt</li>
+        <li>4 cloves garlic, crushed</li>
+        <li>1 tablespoon minced fresh ginger</li>
+        <li>1/4 cup hot water</li>
+        <li>1 teaspoon chili powder</li>
+        <li>1 teaspoon ground coriander</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>1/2 teaspoon ground turmeric</li>
+        <li>2 medium tomatoes, chopped</li>
+        <li>2 green chiles, halved lengthways (Optional)</li>
+        <li>2 skinless, boneless chicken breast halves, cubed</li>
+        <li>1 teaspoon curry paste, such as Patak's</li>
+        <li>1/4 cup fresh cilantro leaves, chopped</li>
+    </ul>
 </body>
 
 </html>
