add steps to create chicken bhuna in chickenBhuna.html

--- a/recipes/chickenBhuna.html
+++ b/recipes/chickenBhuna.html
@@ -30,6 +30,19 @@
         <li>1 teaspoon curry paste, such as Patak's</li>
         <li>1/4 cup fresh cilantro leaves, chopped</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li> Heat oil in a nonstick pan over high heat. Add onion and salt; cook and stir until onion has softened,
+            about 5 minutes. </li>
+        <li>Reduce heat to low; stir in garlic and ginger until fragrant. Add hot water; cover, and cook, stirring
+            occasionally, until water has evaporated, about 5 minutes. </li>
+        <li>Add chili powder, ground coriander, cumin, and turmeric; cook and stir over high heat until spices are
+            toasted, about 5 minutes. Stir in tomatoes and green chiles; cover and cook over low heat for 5 minutes.
+        </li>
+        <li>Add chicken; cook and stir over high heat until browned, about 5 to 7 minutes. Stir in curry paste; reduce
+            heat to low, cover and cook until chicken is cooked through, adding a little water if necessary, about 5
+            minutes. Check seasoning and sprinkle with freshly chopped cilantro. </li>
+    </ol>
 </body>
 
 </html>
