modify index.html add a ul under Odin projects heading put the acnhor tags inside the ul elemnt.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/tiramisu.html">Tiramisu Recipe</a>
-    <a href="./recipes/chickenBhuna.html">Chicken Bhuna Recipe</a>
+   <ul>
+    <li> <a href="./recipes/tiramisu.html">Tiramisu Recipe</a>
+    </li>
+    <li><a href="./recipes/chickenBhuna.html">Chicken Bhuna Recipe</a>
+    </li>
+   </ul>
 </body>
 
 </html>
