--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
 <body>
     <h1>Odin Recipes</h1>
-   <ul>
-    <li> <a href="./recipes/tiramisu.html">Tiramisu Recipe</a>
-    </li>
-    <li><a href="./recipes/chickenBhuna.html">Chicken Bhuna Recipe</a>
-    </li>
-   </ul>
+    <ul>
+        <li> <a href="./recipes/tiramisu.html">Tiramisu Recipe</a>
+        </li>
+        <li><a href="./recipes/chickenBhuna.html">Chicken Bhuna Recipe</a>
+        </li>
+        <li><a href="./recipes/strawberryCheesecakeBites.html">Strawberry Cheesecake Bites</a></li>
+    </ul>
 </body>
 
 </html>
