add Description to Strawberry Cheesecake Recipe

--- a/recipes/strawberryCheesecakeBites.html
+++ b/recipes/strawberryCheesecakeBites.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Strawberry Cheesecake Bites</title>
-    </head>
-    <body>
-        <h1>Strawberry Cheesecake Bites Recipe</h1>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Strawberry Cheesecake Bites</title>
+</head>
+
+<body>
+    <h1>Strawberry Cheesecake Bites Recipe</h1>
+    <h2>Description</h2>
+    <p>These mini strawberry cheesecake bites are a cute two-bite dessert. Stuffed with a cream cheese filling, they can
+        be prepared the night before — but not much earlier than that, as the berries may become soggy.</p>
+</body>
+
 </html>
