add image of strawberryCheeseCakeBites

--- a/recipes/strawberryCheesecakeBites.html
+++ b/recipes/strawberryCheesecakeBites.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Strawberry Cheesecake Bites Recipe</h1>
+    <img src="../images/StrawberryCheesecakeBites.jpg" alt="strawberry-cheesecake-bites-img">
     <h2>Description</h2>
     <p>These mini strawberry cheesecake bites are a cute two-bite dessert. Stuffed with a cream cheese filling, they can
         be prepared the night before — but not much earlier than that, as the berries may become soggy.</p>
