--- a/recipes/strawberryCheesecakeBites.html
+++ b/recipes/strawberryCheesecakeBites.html
@@ -12,6 +12,16 @@
     <h2>Description</h2>
     <p>These mini strawberry cheesecake bites are a cute two-bite dessert. Stuffed with a cream cheese filling, they can
         be prepared the night before — but not much earlier than that, as the berries may become soggy.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 tablespoons graham cracker crumbs</li>
+        <li>1 (8 ounce) package cream cheese, softened</li>
+        <li>½ cup confectioners' sugar</li>
+        <li>2 teaspoons vanilla extract</li>
+        <li>12 large fresh strawberries</li>
+        <li>2 (1 ounce) squares semisweet chocolate (Optional)</li>
+        <li>1 teaspoon canola oil (Optional)</li>
+    </ul>
 </body>
 
 </html>
